correct entry point

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git://github.com/olegp/mongo-sync.git"
   },
   "homepage": "https://github.com/olegp/mongo-sync/",
-  "main": "./lib/mcms.js",
+  "main": "./lib/mongo-sync.js",
   "engines": { "node": ">= 0.4.0" },
   "dependencies" : { "mongolian": ">= 0.1.13", "fibers": ">= 0.6.1" },
   "licenses": [ { "type": "MIT" } ]
