--- a/package.json
+++ b/package.json
@@ -1,19 +1,43 @@
 {
-  "name": "mongo-sync",
-  "keywords": ["mongodb"],
-  "description": "Synchronous MongoDB driver",
-  "version": "0.1.3",
-  "author": "Oleg Podsechin <oleg@ionsquare.com>",
-  "directories" : {
-    "lib" : "./lib"
+  "name":"mongo-sync",
+  "keywords":[
+    "mongodb"
+  ],
+  "description":"Synchronous MongoDB driver",
+  "version":"0.1.4",
+  "author":{
+    "name":"Oleg Podsechin",
+    "email":"oleg@ionsquare.com"
   },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/olegp/mongo-sync.git"
+  "contributors":[
+    {
+      "name":"Alex Lam",
+      "email":"alex.lam@starthq.com"
+    },
+    {
+      "name":"Oleg Podsechin",
+      "email":"oleg@ionsquare.com"
+    }
+  ],
+  "directories":{
+    "lib":"./lib"
   },
-  "homepage": "https://github.com/olegp/mongo-sync/",
-  "main": "./lib/mongo-sync.js",
-  "engines": { "node": ">= 0.4.0" },
-  "dependencies" : { "mongolian": ">= 0.1.13", "fibers": ">= 0.6.1" },
-  "licenses": [ { "type": "MIT" } ]
+  "repository":{
+    "type":"git",
+    "url":"git://github.com/olegp/mongo-sync.git"
+  },
+  "homepage":"https://github.com/olegp/mongo-sync/",
+  "main":"./lib/mongo-sync.js",
+  "engines":{
+    "node":">= 0.4.0"
+  },
+  "dependencies":{
+    "mongolian":">= 0.1.13",
+    "fibers":">= 0.6.1"
+  },
+  "licenses":[
+    {
+      "type":"MIT"
+    }
+  ]
 }
