--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "mongodb":">= 1.3.19"
   },
   "devDependencies":{
-    "fibers":">= 0.6.1"
+    "common-node":">= 0.10.7",
+    "fibers":">= 1.0.0"
   },
   "licenses":[
     {
