--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "node": ">= 0.10.0"
   },
   "dependencies": {
-    "mongodb": ">= 1.3.19"
+    "mongodb": "= 1.3.19"
   },
   "devDependencies": {
     "common-node": ">= 0.10.7",
